--- a/interactive/index.html
+++ b/interactive/index.html
@@ -29,54 +29,31 @@
         </div>
         <div class="grid-item">
             <img class="custom-image" id="customImageA"></img>
-            <input class="custom-image-input" id="uploadImageA" type="file" accept=".jpg, .jpeg, .png"></input>
+            <input class="custom-image-input" id="uploadImageA" type="file" accept=".jpg, .jpeg, .png" onchange="processInput(this)"></input>
             <label for="uploadImageA"><i class="fas fa-camera"></i></label>
         </div>
         <div class="grid-item">
             <img class="custom-image" id="customImageB"></img>
-            <input class="custom-image-input" id="uploadImageB" type="file" accept=".jpg, .jpeg, .png"></input>
+            <input class="custom-image-input" id="uploadImageB" type="file" accept=".jpg, .jpeg, .png" onchange="processInput(this)"></input>
             <label for="uploadImageB"><i class="fas fa-camera"></i></label>
         </div>
     </div>
 </body>
 <script>
-    const input = document.getElementById('uploadImageA');;
-    const input2 = document.getElementById('uploadImageB');;
-
     //input.addEventListener('change', readURL(this));
-    input.onchange = function (event) {
-        console.log(input.files);
-
-        if (input.files && input.files[0]) {
+    function processInput (context) {
+        if (context.files && context.files[0]) {
             var reader = new FileReader();
 
             reader.onload = function (e) {
-                document.getElementById('customImageA').setAttribute('src', e.target.result);
+                var parentDiv = context.parentNode;
+                var targetImage = parentDiv.querySelector('.custom-image');
+                targetImage.setAttribute('src', e.target.result);
             }
 
-            reader.readAsDataURL(input.files[0]);
+            reader.readAsDataURL(context.files[0]);
         }
     };
-
-    input2.onchange = function (event) {
-        console.log(input2.files);
-
-        if (input2.files && input2.files[0]) {
-            var reader = new FileReader();
-
-            reader.onload = function (e) {
-                document.getElementById('customImageB').setAttribute('src', e.target.result);
-            }
-
-            reader.readAsDataURL(input2.files[0]);
-        }
-    };
-
-    input.addEventListener( 'focus', function(){ input.classList.add( 'has-focus' ); });
-    input.addEventListener( 'blur', function(){ input.classList.remove( 'has-focus' ); });
-
-    input2.addEventListener( 'focus', function(){ input.classList.add( 'has-focus' ); });
-    input2.addEventListener( 'blur', function(){ input.classList.remove( 'has-focus' ); });
 </script>
 
 </html>
