--- a/interactive/index.html
+++ b/interactive/index.html
@@ -4,14 +4,15 @@
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="capture.js"></script>
-    <script src="upload.js"></script>
+    <script src="util.js"></script>
     <script src="https://kit.fontawesome.com/80d0187199.js" crossorigin="anonymous"></script>
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
     <meta charset="utf-8">
     <title>MeetingShot - Interactive Webcam Capture</title>
 </head>
 
 <body>
-    <div class="grid-container">
+    <div id="main-block" class="grid-container">
         <div class="grid-item">
             <div id="videoDiv" class="container">
                 <video autoplay="true" id="video">
@@ -19,7 +20,7 @@
                 </video>
             </div>
 
-            <button type="button" id="startbutton">Capture Image</button>
+            <button data-html2canvas-ignore="true" type="button" id="startbutton">Capture Image</button>
         </div>
         <div class="grid-item">
             <canvas id="staticpicture"></canvas>
@@ -30,13 +31,15 @@
         <div class="grid-item">
             <img class="custom-image" id="customImageA"></img>
             <input class="custom-image-input" id="uploadImageA" type="file" accept=".jpg, .jpeg, .png" onchange="processInput(this)"></input>
-            <label for="uploadImageA"><i class="fas fa-camera"></i></label>
+            <label data-html2canvas-ignore="true" for="uploadImageA"><i class="fas fa-camera"></i></label>
         </div>
         <div class="grid-item">
             <img class="custom-image" id="customImageB"></img>
             <input class="custom-image-input" id="uploadImageB" type="file" accept=".jpg, .jpeg, .png" onchange="processInput(this)"></input>
-            <label for="uploadImageB"><i class="fas fa-camera"></i></label>
+            <label data-html2canvas-ignore="true" for="uploadImageB"><i class="fas fa-camera"></i></label>
         </div>
     </div>
+
+    <input type="button" onclick="capture()"></input>
 </body>
 </html>
