Proper webcam selection in modal.

--- a/src/index.html
+++ b/src/index.html
@@ -49,17 +49,17 @@
                     <h3>Select an attendee</h3>
                     <div id="gallery">
                         <div id="camera-modal" class="card">
-                            <canvas id="staticpicture" class="hidden-custom-image video-canvas"></canvas>
-                            <img class="custom-image hidden-custom-image video-snapshot" id="photo"
-                                alt="The screen capture will appear in this box.">
-                            <div id="videoDiv" class="container">
-                                <video autoplay="true" id="video" class='video-streamer'>
+                            <div class="modal-video-bucket">
+                                <canvas id="staticpicture" class="hidden-custom-image video-canvas"></canvas>
+                                <img class="custom-image hidden-custom-image video-snapshot" id="photo"
+                                    alt="The screen capture will appear in this box.">
+                                <div id="videoDiv" class="container">
+                                    <video autoplay="true" id="video" class='video-streamer'>
 
-                                </video>
+                                    </video>
+                                </div>
                             </div>
-                            <div class="card-text">
-                                <p>Webcam</p>
-                            </div>
+                            <div class="card-text">Webcam</div>
                         </div>
                     </div>
                 </div>
