Add some web stream insertion points.

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
                     </span>
                     <h3>Select an attendee</h3>
                     <div id="gallery">
-                        <div id="camera-modal" class="card">
+                        <div id="camera-modal" class="card" onclick="insertWebStream(this);">
                             <div class="modal-video-bucket">
                                 <canvas id="staticpicture" class="hidden-custom-image video-canvas"></canvas>
                                 <img class="custom-image hidden-custom-image video-snapshot" id="photo"
