--- a/src/index.html
+++ b/src/index.html
@@ -48,12 +48,12 @@
                     </span>
                     <h3>Select an attendee</h3>
                     <div id="gallery">
-                        <div id="camera-modal" class="card" onclick="insertWebStream(this);">
+                        <div id="camera-modal" class="card" onclick="updateAttendeeWebStream(updateContext);">
                             <div class="modal-video-bucket">
                                 <canvas id="staticpicture" class="hidden-custom-image video-canvas"></canvas>
                                 <img class="custom-image hidden-custom-image video-snapshot" id="photo"
                                     alt="The screen capture will appear in this box.">
-                                <div id="videoDiv" class="container">
+                                <div id="videoDiv">
                                     <video autoplay="true" id="video" class='video-streamer'>
 
                                     </video>
