Update how modal content is rendered.

--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,10 @@
                             </div>
                             <div class="card-text">Webcam</div>
                         </div>
+                        <div id="custom-image-modal" class="card" onclick="">
+                            <img src="static/images/custom-image.png">
+                            <div class="card-text">Custom Image</div>
+                        </div>
                     </div>
                 </div>
             </div>
