--- a/src/index.html
+++ b/src/index.html
@@ -87,10 +87,7 @@
           </div>
         </div>
         <!-- Meeting Grid  -->
-        <div
-          id="meetingGrid"
-          class="grid-container-2row grid-container-border"
-        ></div>
+        <div id="meetingGrid" class="grid grid-border grid-3row-3col"></div>
       </div>
     </main>
   </body>
