removed asyn to solve race condition and updated css class

--- a/src/index.html
+++ b/src/index.html
@@ -73,9 +73,9 @@
         </div>
     </main>
 </body>
-<script async type="text/javascript" src="static/js/attendee.js"></script>
+<script type="text/javascript" src="static/js/attendee.js"></script>
 <script async type="text/javascript" src="static/js/camera.js"></script>
-<script async type="text/javascript" src="static/js/customattendee.js"></script>
+<script type="text/javascript" src="static/js/customattendee.js"></script>
 <script async type="text/javascript" src="static/js/core.js"></script>
 
 </html>
