Mock meeting footer

--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,10 @@
             </div>
             <!-- Meeting Grid  -->
             <div id="meetingGrid" class="grid grid-border grid-3row-3col"></div>
+
+            <div class="meeting-footer">
+                <img src="/src/static/images/meeting-footer.png"></img>
+            </div>
         </div>
     </main>
 </body>
