Move places to the right location in the JS

--- a/src/index.html
+++ b/src/index.html
@@ -83,4 +83,6 @@
 <script type="text/javascript" src="static/js/customattendee.js"></script>
 <script async type="text/javascript" src="static/js/core.js"></script>
 
+<script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+
 </html>
