Adding attendee counter

--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,7 @@
                 <div class="meeting-footer">
                     <img src="/src/static/images/meeting-footer.png"></img>
                 </div>
+                <p id="counterLabel" class="attendee-counter-label">9</p>
             </div>
             <canvas id="staticPicture"></canvas>
         </div>
