--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,20 @@
                 <option value="8">8</option>
                 <option value="9">9</option>
             </select>
+
+            <label for="attendeeHighlight">Highlight attendee:</label>
+            <select id="attendeeHighlight" name="attendeeHighlight">
+                <option selected value="None">None</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+            </select>
             <!-- <input type="checkbox" id="showNames" name="showNames" checked />
             <label for="showNames">Show Attendee Names</label> -->
 
