--- a/src/about.html
+++ b/src/about.html
@@ -15,8 +15,8 @@
         <nav>
             <div class="topnav">
                 <a href="index.html">Screenshot Generator</a>
-                <a class="active" href="#news">About</a>
-                <a href="#contact">FAQ</a>
+                <a class="active" href="about.html">About</a>
+                <a href="faq.html">FAQ</a>
             </div>
         </nav>
     </section>
