--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,9 @@
     <section class="background">
         <nav>
             <div class="topnav">
-                <a class="active" href="/">Screenshot Generator</a>
+                <a class="active" href="index.html">Screenshot Generator</a>
                 <a href="about.html">About</a>
-                <a href="#contact">FAQ</a>
+                <a href="faq.html">FAQ</a>
             </div>
         </nav>
         <div class="meeting-details">
