refactoring naming for consistency

--- a/src/index.html
+++ b/src/index.html
@@ -41,11 +41,11 @@
 
             <div class="selector-composite">
                 <div style="display: inline">
-                    <label for="attendeeCount">Number of Attendees:</label>
+                    <label for="selectAttendeeCount">Number of Attendees:</label>
                 </div>
                 <div style="display: inline">
                     <div class="select">
-                        <select id="attendeeCount" name="attendeeCount">
+                        <select id="selectAttendeeCount" name="selectAttendeeCount">
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
