Updated Grid resizing behavior

--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
     </section>
 
     <main>
-        <div class="background2">
+        <div class="meeting-background">
             <!-- Meeting Grid  -->
             <div id="meetingComposition" class="meeting-composition">
                 <div id="meetingGrid" class="grid grid-border grid-3row-3col"></div>
