Update CSS and formatting

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
         gtag('config', 'UA-163469469-2');
     </script>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.1/build/pure-min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="static/css/customattendee.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="static/css/main.css" />
@@ -36,7 +36,7 @@
                 <a href="faq.html">FAQ</a>
             </div>
         </nav>
-        <div class="meeting-details">
+        <div class="light-color-block">
             <h2>Meeting Details</h2>
 
             <div class="selector-composite">
@@ -135,6 +135,6 @@
 <script type="text/javascript" src="static/js/customattendee.js"></script>
 <script async type="text/javascript" src="static/js/core.js"></script>
 
-<script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+<script src="static/js/html2canvas.min.js"></script>
 
 </html>
