Update nav links

--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,8 @@
         <nav>
             <div class="topnav">
                 <a class="active" href="index.html">Screenshot Generator</a>
-                <a href="about.html">About</a>
-                <a href="faq.html">FAQ</a>
+                <a href="about/index.html">About</a>
+                <a href="faq/index.html">FAQ</a>
             </div>
         </nav>
         <div class="light-color-block">
