--- a/src/about/index.html
+++ b/src/about/index.html
@@ -23,8 +23,8 @@
     <nav>
       <div class="topnav">
         <a href="index.html">Screenshot Generator</a>
-        <a class="active" href="about.html">About</a>
-        <a href="faq.html">FAQ</a>
+        <a class="active" href="about/index.html">About</a>
+        <a href="faq/index.html">FAQ</a>
       </div>
     </nav>
   </section>
